# dragonfly-loader

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  make.ps1  pyproject.toml  requirements.in  requirements.txt
.github/: dependabot.yaml
.github/workflows/: container-build-push.yaml  docker-build-push.yaml  image-build-push.yaml  lint-test.yaml  python-ci.yaml
DragonflyFunction/: function.json  function.py
docs/source/: changelog.rst  conf.py  index.rst
requirements/: requirements-dev.txt  requirements-docs.txt  requirements.in  requirements.txt
src/cronjob/: __main__.py  cronjob.py  settings.py
src/loader/: __init__.py  __main__.py  constants.py  loader.py  models.py  settings.py
tests/: test_cronjob.py  test_loader.py
